Fix: Shift mobile menu button left by 25% (25vw) per user request

--- a/navbar_v2.css
+++ b/navbar_v2.css
@@ -403,6 +403,8 @@ footer {
 
     .mobile-menu-btn {
         display: block;
+        margin-right: 25vw;
+        /* Moved left by 25% of viewport width per user request */
     }
 
     .navbar .btn {
